--- a/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
@@ -107,9 +107,8 @@ inputs the Countdown Time, the System could Initiate the Launch,
 hold the Countdown, abort the Countdown.  The Flight Director would
 have final authority.
 \end{itemize}
-\textbf{Frequency of Occurence:  }  Almost continuously:  dependent
-upon the Countdown time set and the frequency to run the Launch
-simulation and how much time the Launch Simulation takes\\\\
+\textbf{Frequency of Occurence:  }  Almost continuously:  based on the
+frequency of desired Launches.\\\\
 \textbf{Open Issues:  }
 \begin{itemize}
 \item What about a fully automated System?
