--- a/LunarMissionDesign/LaunchSimulatorNounsListing.tex
+++ b/LunarMissionDesign/LaunchSimulatorNounsListing.tex
@@ -8,7 +8,7 @@
 \textbf{Launch Simulator Nouns Listing}\\
 Launch Simulator\\
 Flight Controller\\
-Astronaut\\
+Astronaut(s)\\
 Engineer\\
 Technician\\
 Pre-Launch Data\\
@@ -27,6 +27,32 @@ Anomaly\\
 User(s)\\
 Decision\\
 Launch\\
-Countdown Timer
+Countdown Timer\\
+Flight Controller Goal\\
+Administrator\\
+Politicians\\
+Campaign\\
+Political Purposes\\
+Pre-Launch Activities\\
+Countdown\\
+System\\
+Errors\\
+Pre-Launch Data\\
+Engines(s)\\
+Engine Ignition\\
+Launch Data\\
+Rocket\\
+Launching Mechanism\\
+Launch Tower\\
+Height\\
+Transition\\
+Issue\\
+Launch Abort Procedures\\
+Launch Abort\\
+Launch Initialization\\
+Launch Sequence\\
+Factors\\
+Data Points\\
+State\\
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
