--- a/LunarMissionDesign/LaunchSimulatorNounsListing.tex
+++ b/LunarMissionDesign/LaunchSimulatorNounsListing.tex
@@ -54,5 +54,8 @@ Launch Sequence\\
 Factors\\
 Data Points\\
 State\\
+Launch Iniitiation Data\\
+Frequency\\
+Abort Procedures\\
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
