--- a/LunarMissionDesign/LaunchSimulatorNounsListing.tex
+++ b/LunarMissionDesign/LaunchSimulatorNounsListing.tex
@@ -37,11 +37,10 @@ Pre-Launch Activities\\
 Countdown\\
 System\\
 Errors\\
-Pre-Launch Data\\
 Engines(s)\\
 Engine Ignition\\
 Launch Data\\
-Rocket\\
+Rocket (Launch Vehicle)\\
 Launching Mechanism\\
 Launch Tower\\
 Height\\
@@ -57,5 +56,13 @@ State\\
 Launch Iniitiation Data\\
 Frequency\\
 Abort Procedures\\
+Flight Congtroller Goal\\
+Astronoaut Goal\\
+Launch Data\\
+Payload\\
+Capsule\\
+(Flight Time)Clock\\
+(Final) Stage\\
+Transition\\
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
