--- a/LunarMissionDesign/LaunchSimulatorUseCase3FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase3FullyDressed.tex
@@ -10,7 +10,7 @@
 \textbf{Level:  }Flight Controller Goal, Astronaut Goal\\
 \textbf{Primary Actor:  }Flight Controller, Astronaut\\
 \textbf{Secondary Actor:  }Engineer/Technician\\
-\textbf{Related Use Cases:  }\textit{Use Case 2:  The Flight Director
+\textbf{Related Use Cases:  }\textit{Use Case 2:  The Flight Controller
 shall Initiate Launch}\\
 \textbf{Stakeholders \& Interrests:  }
 \begin{itemize}
