--- a/LunarMissionDesign/LaunchSimulatorNounsListing.tex
+++ b/LunarMissionDesign/LaunchSimulatorNounsListing.tex
@@ -7,6 +7,7 @@
 \noindent
 \textbf{Launch Simulator Nouns Listing}\\
 Launch Simulator\\
+Launch\\
 Flight Controller\\
 Astronaut(s)\\
 Engineer\\
@@ -16,7 +17,8 @@ Countdown\\
 System\\
 Sequence\\
 Countdown Time\\
-Actor(s)\\
+(Primary) Actor(s)\\
+(Secondary) Actors(s)\\
 Pre-Launch\\
 (Initiate) Launch\\
 Transition\\
@@ -53,7 +55,7 @@ Launch Sequence\\
 Factors\\
 Data Points\\
 State\\
-Launch Iniitiation Data\\
+Launch Initiation Data\\
 Frequency\\
 Abort Procedures\\
 Flight Congtroller Goal\\
@@ -64,5 +66,11 @@ Capsule\\
 (Flight Time)Clock\\
 (Final) Stage\\
 Transition\\
+(Final) Stage\\
+(Abort) Status\\
+(Launch) Anomalies\\
+(Launch) Issues\\
+Use Cases\\
+Manual Override\\
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
