--- a/LunarMissionDesign/LaunchSimulatorUseCase3FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase3FullyDressed.tex
@@ -70,7 +70,7 @@ primary actors to abort the launch.  Primary Actors have final
 authority on launch abort.
 \item[5a.]If the final stage fails to separate from the
 payload/capsule, then the System alerts the issue, the System does not
-transition out of launch.  The lauch is aborted
+transition out of launch.  The launch is aborted
 (which can be initiated via either of the primary actors).  The
 System reflects the abort status.
 \end{itemize}
