06-08*24-00 Github fucking sucks

--- a/LunarMissionDesign/LaunchSimulatorNounsListing.tex
+++ b/LunarMissionDesign/LaunchSimulatorNounsListing.tex
@@ -21,23 +21,13 @@ Countdown Time\\
 (Secondary) Actors(s)\\
 Pre-Launch\\
 (Initiate) Launch\\
-Transition\\
-State\\
 Time\\
 Abort\\
 Anomaly\\
 User(s)\\
 Decision\\
-Launch\\
 Countdown Timer\\
-Flight Controller Goal\\
-Administrator\\
-Politicians\\
-Campaign\\
-Political Purposes\\
 Pre-Launch Activities\\
-Countdown\\
-System\\
 Errors\\
 Engines(s)\\
 Engine Ignition\\
@@ -46,30 +36,24 @@ Rocket (Launch Vehicle)\\
 Launching Mechanism\\
 Launch Tower\\
 Height\\
-Transition\\
 Issue\\
+Countdown Abort Procedures\\
 Launch Abort Procedures\\
 Launch Abort\\
-Launch Initialization\\
+Launch Initialization (Data)\\
 Launch Sequence\\
 Factors\\
-Data Points\\
 State\\
-Launch Initiation Data\\
 Frequency\\
-Abort Procedures\\
 Flight Congtroller Goal\\
 Astronoaut Goal\\
-Launch Data\\
 Payload\\
 Capsule\\
 (Flight Time)Clock\\
 (Final) Stage\\
-Transition\\
 (Final) Stage\\
 (Abort) Status\\
 (Launch) Anomalies\\
-(Launch) Issues\\
 Use Cases\\
 Manual Override\\
 \end{document}
