--- a/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
@@ -61,7 +61,10 @@ such a transition;  the Countdown continues at the time stopped
 to
 abort the Countdown.  The System responds by abandoning the Countdown,
 alerting the Actors of the Abort
-\item[5c.] The Flight Controller can change the Countdown Time as
+\item[3c.]If the Flight Controller enters an unacceptatble Countdown
+Time, then the System refuses to set the time and instructs the
+Flight Controller to enter an acceptable Countdown Time
+\item[3d-5c.]The Flight Controller can change the Countdown Time as
 desired prior to starting the Countdown.  The System changes the
 Countdown time, reflects the change to the Filght Controller.  The
 Flight Controller Starts the Countdown as typical
@@ -97,6 +100,8 @@ Controller
 Countdown Abort.  That currently rests with the Flight Controller.  The
 Engineers/Technicians and Astronaut can advise the Flight Controller,
 in addition to the System:  all based on Pre-Launch Data.
+\item There must be a Countdown Time of 1 hour entered before the
+Countdown can begin.
 \end{itemize}
 \textbf{Technology \& Variations List: }
 \begin{itemize}
