--- a/LunarMissionDesign/LaunchSimulatorUseCase2FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase2FullyDressed.tex
@@ -31,35 +31,38 @@ System indicates no errors in the Pre-Launch Data\\
 2. Intiates Lauch & \\\hline
 & 3.  Directs Engines to ignite\\\hline
 & 4.  Returns confirmation of the engine ignition\\\hline
-& 5.  Monitors Launch Data\\\hline
-& 6.  Returns Launch Data\\\hline
-& 7.  Repeat 5 \& 6 Until Transition out of Launch
-Initialization\\\hline
+& 5.  Monitors Engine Thrust Data\\\hline
+& 6.  Returns Engine Trust Data\\\hline
+& 7.  Repeats 5 \& 6 until Engine Trust adequate to lift
+rocket\\\hline
 & 8.  Rocket ready to Launch\\\hline
 9. Launch Rocket &\\\hline
-& 10.   Execute the Launching Mechanism (Launches Rocket)\\\hline
-& 11.  Monitors Rocket for Clearing the Launch Tower\\\hline
-& 12.  Returns Rocket's current height\\\hline
-& 13.  Repeats 11 \& 12 until Rocket Clears Launch Tower\\\hline
-& 14.  Returns Rocket Cleared Tower\\\hline
-& 15.  Transitions to Launch upon Rocket Clearing the Launch
+& 9.   Execute the Launching Mechanism (Launches Rocket)\\\hline
+& 10.  Monitors Engine Thrust Data\\\hline
+& 11.  Returns Engine Thrust Data\\\hline
+& 12.  Monitors Rocket for Clearing the Launch Tower\\\hline
+& 13.  Returns Rocket's current height\\\hline
+& 14.  Repeats steps 10 through 13 until Rocket Clears Launch
 Tower\\\hline
-& 16.  Informs of Transition\\\hline 
+& 13.  Returns Rocket Cleared Tower\\\hline
+& 14.  Transitions to Launch upon Rocket Clearing the Launch
+Tower\\\hline
+& 15.  Informs of Transition\\\hline 
 \end{tabular}
 \textbf{Alternative Flows:}
 \begin{itemize}
-\item[2a]The Flight Controller can chose not to Initiate the Launch
 \item[4a]If the Engines do not ignite, then the System Alerts the
 Flight Controller of the issue, the Flight Controller aborts the
 laumch and all the actors follow their repsective Launch Abort
 Procedures
-\item[5a-8a]If the System communicates an error/issue in the Launch
-Data, then the System alerts the Flight Controller of the error/issue,
-with recomendation (abort/not abort Launch).
-\item[9a]If the Flight Controller can abort the Launch, the
+\item[5a-7a]If, after an expected time for the Engine Thrust to be
+adequate enough to lift the Rocket, the Engine thrust is not adequate
+enough to lift the Rocket, then the System alerts the Flight Controller
+of the Engine inadequancy with recomendation (abort/not abort Launch).
+\item[9a]If the Flight Controller aborts the Launch, the
 System will not activate the Launch Mechinism, all the actors are to
 follow their respective Launch Abort Procedures.
-\item[16a]In the event of a Launch Abort, the System will not
+\item[15a]In the event of a Launch Abort, the System will not
 transition to Launch
 \end{itemize}
 \textbf{Special Requirements:}
@@ -88,6 +91,7 @@ Controller.
 when to ignite the engines, when  to execute the Launching
 Mechanism, and make the decision to abort the Launch Sequence.  The
 Flight Director would have final authority.
+\item[2a]The Flight Controller can chose not to Initiate the Launch
 \end{itemize}
 \textbf{Frequency of Occurrence:  }Almost continuoulsy.  Based on the
 Frequency of desired Launches.\\\\
@@ -102,6 +106,9 @@ procedures
 other possible abort procedures
 \item Should the Astronauts have the ability to abort the Launch
 initialization?
+\item If the Engine thrust is inadequate to lift the to launch and
+the Flight Director executes the Launch Rocket procedure, should there
+be a System Override where the Launching Mechanism is not executed?
 \end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
